--- a/src/static/index.html
+++ b/src/static/index.html
@@ -54,7 +54,7 @@
           })
           .then(r => {
             if (!r.ok) throw r;
-            return r.json();
+            // return r.json();
           })
           .then(() => {
             this.isValid = true;
